# p2ds

./: .gitignore  Cargo.toml  readme.md
docs/diary/: 00_goal.md
src/: lib.rs  main.rs  wasm.rs
src/physics/: coord.rs  gravity.rs  mod.rs  momentum.rs
